OpenJMLTest/test/gitbug450/expected
test\gitbug450\ArrList.java:15: error: no suitable method found for add(int)
        theList.add(a);
               ^
    method Collection.add(String) is not applicable
      (argument mismatch; int cannot be converted to String)
    method List.add(String) is not applicable
      (argument mismatch; int cannot be converted to String)
    method AbstractCollection.add(String) is not applicable
      (argument mismatch; int cannot be converted to String)
    method AbstractList.add(String) is not applicable
      (argument mismatch; int cannot be converted to String)
    method ArrayList.add(String) is not applicable
      (argument mismatch; int cannot be converted to String)
Operation not performed because of parse or type errors
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
